Update to CSS style

--- a/workoutapp-frontend/workoutapp-angular/src/app/app.component.html
+++ b/workoutapp-frontend/workoutapp-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class = "container">
-  <h1 class="mt-3 mb-3">Workouts</h1>
+<div class="page-container">
 
-  <app-workout-details></app-workout-details>
+<app-workout-details></app-workout-details>
+
 </div>
