--- a/workoutapp-frontend/workoutapp-angular/src/app/component/workout-details/workout-details.component.html
+++ b/workoutapp-frontend/workoutapp-angular/src/app/component/workout-details/workout-details.component.html
@@ -1,12 +1,18 @@
-<div *ngFor="let workoutDetail of workoutDetails">
-    <div *ngFor="let movement of weightliftingMovements">
-        <div *ngIf="workoutDetail.liftId==movement.liftId">
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <div class="container-fluid">
+      <div class="row">
+        <div *ngFor="let detail of workoutDetails" class="col-md-3">
+          <div class="product-box">
+              
+              <!-- Still need to figure out how to display lift name without creating dups-->
+            Lift Name: {{ detail.liftName }} <br />
+            Set: {{ detail.setNumber }} Reps: {{ detail.repetitions }} Weight:
+            {{ detail.weight }}
 
-    Lift Name: {{ movement.liftName}} <br>
-    Sets: {{ workoutDetail.setNumber}} <br>
-    Reps: {{ workoutDetail.repetitions}} <br>
-    Weight: {{ workoutDetail.weight}}
-
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
